# image_getter

./: .gitignore  README.md  pyproject.toml
image_getter/: image_process.py
tests/: test_image_getter.py
